# server-app/src/main/java/com/bancosimple/backend/features/frequent_account/model/AccountType.java
@@ -1,0 +1,6 @@
+package com.bancosimple.backend.features.frequent_account.model;
+
+public enum AccountType {
+    INTERNAL,
+    EXTERNAL
+}
