# server-app/src/main/java/com/bancosimple/backend/features/frequent_account/model/BankName.java
@@ -1,0 +1,16 @@
+package com.bancosimple.backend.features.frequent_account.model;
+
+public enum BankName {
+    BANCO_DE_CHILE,
+    BANCOESTADO,
+    SANTANDER,
+    BCI,
+    ITAU,
+    FALABELLA,
+    CENCOSUD,
+    SECURITY,
+    BICE,
+    SCOTIABANK,
+    HSBC,
+    CORPBANCA
+}
