# server-app/src/main/java/com/bancosimple/backend/features/user/dto/UserAccountDTO.java
@@ -1,0 +1,11 @@
+package com.bancosimple.backend.features.user.dto;
+
+import java.util.List;
+
+public record UserAccountDTO(
+        String firstName,
+        String lastName,
+        String email,
+        String documentNumber,
+        List<String> accountNumbers
+) {}
