# server-app/src/main/java/com/bancosimple/backend/features/user/service/UserService.java
@@ -1,5 +1,6 @@
 package com.bancosimple.backend.features.user.service;
 
+import com.bancosimple.backend.features.user.dto.UserAccountDTO;
 import com.bancosimple.backend.features.user.dto.UserDTO;
 import java.util.List;
 
@@ -10,4 +11,5 @@ public interface UserService {
     UserDTO update(Long id, UserDTO userDTO);
     void deleteById(Long id);
     UserDTO findByEmail(String email);
+    UserAccountDTO findByDocumentNumber(String documentNumber);
 }
